# PromptCompEval

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
aider/: Makefile  data_import.py  my_dataset.json  run_entry.py  test_data.json  test_setup.sh
aider/docker/: Dockerfile  README.md  entrypoint.sh  patch_dep_util.sh
benchmarks/configs/: default.yaml
benchmarks/data/: sample_dataset.json
examples/: basic_usage.py
experiments/: Makefile  aider_run.sh  test_data.json
friendzone/: user_1.json
friendzone/test_data/: user_001.json  user_002.json  user_003.json  user_005.json  user_006.json  user_007.json  user_008.json  user_009.json  user_010.json  user_011.json  user_012.json  user_013.json  user_014.json  user_015.json  user_016.json  user_017.json  user_018.json  user_019.json  user_020.json
scripts/: compare_techniques.py  run_benchmarks.py  setup.sh
src/promptcompeval/: __init__.py  evaluator.py  techniques.py
tests/: __init__.py  test_techniques.py
